syntax = "proto3";

import "google/protobuf/empty.proto";
import "./hooks/entry.proto";
import "./auth/entry.proto";

package auth;

service AuthService {
    // Auth methods
    rpc RequestMessage(google.protobuf.Empty) returns (RequestMessageResponse);
    rpc GenerateTestSignature(GenerateTestSignatureRequest) returns (GenerateTestSignatureResponse);
    rpc VerifySignature(VerifySignatureRequest) returns (VerifySignatureResponse);
    
    // Hooks methods
    rpc AfterAuthenticated(AfterAuthenticatedRequest) returns (google.protobuf.Empty);  
}