syntax = "proto3";

package auth_service;

message AfterAuthenticatedRequest {          
    string userId = 1;    
}
